fixed guess wrapping issue

--- a/styles/style.css
+++ b/styles/style.css
@@ -314,12 +314,11 @@ input:focus {
 }
 
 ul.guessBox {
-	height: 80px;
+	height: 85px;
 	margin: 10px auto 0;
 	background: #fbfbfb;
 	padding: 0.5em;
 	display: block;
-	line-height: 2em;
 	border-bottom-left-radius: 4px;
 	border-bottom-right-radius: 4px;
 	color: #fff;
@@ -328,13 +327,13 @@ ul.guessBox {
 ul.guessBox li {
 	display: inline;
 	background-color: #1F253D;
-	padding: 0.3em;
+	padding: 0.4em;
 	-webkit-border-radius: 4px;
 	-moz-border-radius: 4px;
 	border-radius: 4px;
-	width: 95%;
 	margin: 0.2em;
 	color: #fff;
+  float:left;
 }
 
 input:focus::-webkit-input-placeholder { color:transparent; }
